<resources>
    <string name="app_name">Sample BroadCast</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_del">Remove</string>
    <string name="force_new_live">Force new live</string>
    <string name="source_title">Source</string>
    <string name="api_token_title">AppId</string>
    <string name="region_title">Region</string>
    <string name="api_base_title">API Url</string>
    <!-- Video Preferences -->
    <string name="video_title">Video</string>
    <string name="profile_title">Profile Encoder</string>
    <string name="fps_title">Fps</string>
    <string name="bitrate_title">Bitrate</string>
    <string name="adaptive_bitrate_title">Adaptive bitrate</string>
    <string name="keyframe_title">iFrame Interval</string>
    <string name="format_title">Format</string>
    <!-- Sync Preferences -->
    <string name="audio_title">Audio</string>
    <string name="stereo_title">Stereo</string>
    <string name="sample_rate_title">Sample rate</string>
    <string name="region_prompt">Choose a region</string>
    <string name="title_activity_firebase_auth">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="general_title">General</string>
    <string name="version_title">Build Number</string>
    <string name="broadcast_display">BroadCast Display</string>
    <string name="broadcast">BroadCast</string>
    <string name="stream_key">Stream Key</string>
    <string name="rtmp">rtmp://</string>
    <string name="watermark">Watermark</string>
    <string name="settings">Settings</string>
</resources>
