<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="pref_video"
        app:title="@string/video_title">

        <ListPreference
            app:defaultValue="720"
            app:entries="@array/profile_entries"
            app:entryValues="@array/profile_values"
            app:iconSpaceReserved="false"
            app:key="camera_profile_key"
            app:title="@string/profile_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="4000000"
            app:entries="@array/video_max_bitrate"
            app:entryValues="@array/video_max_bitrate_values"
            app:iconSpaceReserved="false"
            app:key="video_bitrate_key"
            app:title="@string/bitrate_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="30"
            app:entries="@array/fps_entries"
            app:entryValues="@array/fps_values"
            app:iconSpaceReserved="false"
            app:key="fps_key"
            app:title="@string/fps_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="2"
            app:entries="@array/i_frame_intervals"
            app:entryValues="@array/i_frame_intervals"
            app:iconSpaceReserved="false"
            app:key="frame_interval_key"
            app:title="@string/keyframe_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="pref_audio"
        app:title="@string/audio_title">

        <ListPreference
            app:defaultValue="128"
            app:entries="@array/bitrate_entries"
            app:entryValues="@array/bitrate_values"
            app:iconSpaceReserved="false"
            app:key="audio_bitrate_key"
            app:title="@string/bitrate_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="44100"
            app:entries="@array/sample_rates"
            app:entryValues="@array/sample_rate_values"
            app:iconSpaceReserved="false"
            app:key="sample_rate_key"
            app:title="@string/sample_rate_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="audio_stereo_key"
            app:summaryOff="1 Channel"
            app:summaryOn="2 Channel"
            app:title="@string/stereo_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="pref_general"
        app:title="@string/general_title">
        <Preference
            app:defaultValue="200101"
            app:iconSpaceReserved="false"
            app:key="version_key"
            app:title="@string/version_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
