<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_padding_medium"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w_120"
        android:src="@drawable/snake" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txtInfo"
        android:layout_below="@+id/ivLogo"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_medium"
            android:hint="@string/rtmp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtStreamKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_medium"
            android:ellipsize="middle"
            android:hint="@string/stream_key"
            android:maxLines="5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/w_56" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_medium"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/broadcast" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStartDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_medium"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/broadcast_display" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_padding_medium"
        android:gravity="center"
        tools:text="@string/app_name" />
</RelativeLayout>
